Add capitalize method and button

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <input id="name" name="name" class="form-control">
   </div>
 
-  <button type="submit" class="btn">Add Survey</button>
+  <button type="submit" class="btn btn-success">Add Survey</button>
 
 </form>
 
