Add web app functionality to add questions to a survey.

--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 <% if @surveys.any?() %>
 <ul>
   <% @surveys.each() do |survey|%>
-    <li><%= survey.name() %></li>
+    <li><a href="/survey/<%= survey.id() %>"><%= survey.name() %></a></li> 
   <% end %>
 </ul>
 <% end %>
