--- a/views/survey.erb
+++ b/views/survey.erb
@@ -4,9 +4,14 @@
   <input value="<%= @survey.id() %>" name="survey_id" type="hidden">
   <div class="form-group">
     <label for="description">Add your Question here!</label>
-    <input name="description" id="description" type ="text">
+    <input name="description" id="description" type ="text" class="form-control">
   </div>
-  
+
+  <div class="form-group">
+    <label for="responses">Add Response Options(comma delimited)</label>
+    <input name="responses" id="responses" type="text" placeholder="yes,no,maybe" class="form-control" required>
+  </div>
+
   <button type="submit-warning">Add Question</button>
 </form>
 
